[workspace]
resolver = "2"
members = ["forbid_bob"]

[profile.release]
strip = "debuginfo" # Remove debugging info from the binary
panic = "abort"     # Panics are transcribed to Traps when compiling for wasm anyways
lto = true          # Link-time-optimization produces notable decrease in binary size
opt-level = "z"     # Optimize for size vs speed with "s"/"z"(removes vectorization)
codegen-units = 1   # Further reduces binary size but increases compilation time
