[package]
name = "forbid_bob"
version = "2.0.0-pre-rc.8"
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# A smartcontract should be linked dynamically so that it may link to functions exported
# from the host environment. Also, host environment executes the smartcontract by
# calling the function which smartcontract exports (entry point of execution)
crate-type = ['cdylib']

[dependencies]
iroha_wasm = { path = "../../wasm", features = ["debug"]}
